# Dental_005

./: .ci_trigger  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dataset.yaml  development_log.txt  export_onnx.py  pyproject.toml  requirements.txt  solve_issue.py  streamlit_app.py
.github/workflows/: ci.yml  python-ci.yml
docs/: ARCHITECTURE.md  Phase_Field_Enhancement.md
reports_archive/: 260710_0937_YOLOv8x_Caries_Seg_E2E_Validation_Report.md
scripts/: setup_env.py
src/alphadent/: __init__.py  app.py  benchmark.py  inference.py  train.py  valid.py
src/alphadent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/alphadent/utils/: convert_9_classes_dataset_to_4_classes.py  draw_annotations.py
tests/: test_imports.py
weights/: yolov8x_AlphaDent_4_classes_960px.pt  yolov8x_AlphaDent_9_classes_640px.pt  yolov8x_AlphaDent_9_classes_960px.pt
yolo_seg_x_proj_320/val/labels/: p001_F_51_001.txt  p001_F_51_002.txt  p001_F_51_003.txt  p001_F_51_004.txt  p015_M_53_001.txt
yolo_seg_x_proj_640/val/labels/: p001_F_51_001.txt  p001_F_51_003.txt  p026_F_34_002.txt  p026_F_34_003.txt  p036_M_13_001.txt  p036_M_13_002.txt  p044_F_35_001.txt  p044_F_35_002.txt  p056_F_60_002.txt  p078_F_38_001.txt  p078_F_38_002.txt  p078_F_38_003.txt  p097_F_43_002.txt  p101_F_24_001.txt
yolo_seg_x_proj_640/val2/labels/: p001_F_51_002.txt  p001_F_51_004.txt  p015_M_53_003.txt  p034_F_17_001.txt  p034_F_17_002.txt  p034_F_17_003.txt  p056_F_60_001.txt  p056_F_60_003.txt  p066_M_34_001.txt  p066_M_34_002.txt  p066_M_34_003.txt  (+5 more)
(+92 files in other folders)
