[project]
name = "alphadent"
version = "1.0.0"
description = "AI-based dental caries detection and diagnosis assistance system using YOLOv8."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics",
    "torch",
    "streamlit",
    "opencv-python-headless",
    "Pillow",
    "plotly",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["data", ".pytest_cache", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["data/", "\\.pytest_cache/"]
